# 3d-renderer

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
